# klite

./: .gitignore  .gitmodules  klite.pri  klite.pro
main/: main.cpp  main.pro  main.qrc  other.cpp  other.h  pre.js
noqt/: CMakeLists.txt  index.html
py/: asconfig.json  main.py  package.json  pyproject.toml  requirements.txt
py/assembly/: index.ts
test/: test.pro  tst_tl.cpp
